# fars

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  examples.sh
.github/workflows/: rust.yml
examples/: change_email.rs  change_password.rs  customize_http_client.rs  delete_account.rs  delete_profile.rs  fetch_providers_for_email.rs  get_user_data.rs  handle_error.rs  id_token_verification.rs  link_with_email_password.rs  link_with_google.rs  raw_sign_in_with_email_password.rs  refresh_token.rs  send_email_verification.rs  send_password_reset_email.rs  sign_in_anonymously.rs  sign_in_by_refresh_token.rs  sign_in_facebook_oauth_credential.rs  sign_in_google_oauth_credential.rs  sign_in_oauth_credential.rs  sign_in_twitter_oauth_credential copy.rs  sign_in_twitter_oauth_credential.rs  sign_in_with_email_password.rs  sign_in_with_facebook_oauth_credential.rs  sign_in_with_facebook_oauth_credential_on_auth_code.rs  sign_in_with_facebook_oauth_credential_on_device_code.rs  sign_in_with_github_oauth_credential.rs  sign_in_with_github_oauth_credential_on_auth_code.rs  sign_in_with_google_oauth_credential.rs  sign_in_with_google_oauth_credential_on_auth_code.rs  sign_in_with_google_oauth_credential_on_device_code.rs  sign_in_with_microsoft_oauth_credential_on_auth_code.rs  sign_in_with_refresh_token.rs  sign_in_with_twitter_oauth_credential.rs  sign_in_with_twitter_oauth_credential_on_auth_code.rs  sign_up_with_email_password copy.rs  sign_up_with_email_password.rs  unlink_google.rs  unlink_password.rs  update_profile.rs  (+1 more)
src/: api.rs  client.rs  config.rs  data.rs  endpoint.rs  error.rs  lib.rs  oauth.rs  result.rs  session.rs  verification.rs
src/api/: change_email.rs  change_password.rs  confirm_email_verification.rs  confirm_password_reset.rs  delete_account.rs  exchange_custom_token_for_an_id_and_refresh_token.rs  exchange_refresh_token.rs  fetch_providers_for_email.rs  get_user_data.rs  link_with_email_password.rs  link_with_oauth_credential.rs  send_email_verification.rs  send_password_reset_email.rs  (+7 more)
(+45 files in other folders)
