[package]
name = "fars"
version = "0.2.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
rust-version = "1.75"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An unofficial Rust client for the Firebase Auth REST API."
documentation = "https://docs.rs/fars"
repository = "https://github.com/mochi-neko/fars"
categories = ["api-bindings", "authentication"]
keywords = ["firebase", "auth", "rest", "api", "client"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"

[features]
default = []
verify = ["jsonwebtoken"]
custom_client = []
oauth = ["oauth2"]
full = ["custom_client", "verify", "oauth"]

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "0.7.1"
thiserror = "^1.0"
jsonwebtoken = { version = "^9.2", optional = true }
oauth2 = { version = "^4.4", optional = true }

[dev-dependencies]
anyhow = "1.0.78"
axum = "0.7.3"
clap = { version = "4.4.12", features = ["derive"] }
qrcode = "0.13.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
webbrowser = "0.8.12"
